dabjeongneo/src/main/kotlin/com/example/studykotlin/global/error/ErrorCode.kt
package com.example.studykotlin.global.error

enum class ErrorCode(
    val status: Int,
    val message: String
) {
    USERNAME_NOT_FOUND(404,"Username not found")
}